--- a/style.css
+++ b/style.css
@@ -134,15 +134,16 @@
 }
 
 .abc {
-    text-align: center;
-    padding: 0.5em;
-    margin: 3px;
-    width: 55px;
-    height: 20px;
-    color: rgb(255, 255, 255);
-    background-color: rgba(10, 56, 113, 1);
-    border: 1px solid rgba(10, 56, 113, 1);
-    border-radius: 0.5em;
+  text-align: center;
+  padding: 0.5em;
+  margin: 3px;
+  width: 55px;
+  height: 20px;
+  color: rgb(255, 255, 255);
+  background-color: rgba(10, 56, 113, 1);
+  border: 1px solid rgba(10, 56, 113, 1);
+  border-radius: 0.5em;
+
 }
 
 .abc:hover {
@@ -152,6 +153,8 @@
   background-color: #E5E5E5;
 }
 
-
+.blockTwo{
+  display: inline-block;
+}
 
 
